team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/Cockpit_Cohort_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Nightly SQL-cohort win-rate snapshot per director. Rates are stored numbers (not formulas). ARR is Number, not Currency. Upserted on External_Id__c.</description>
    <label>Cockpit Cohort Snapshot</label>
    <nameField>
        <displayFormat>CCS-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cockpit Cohort Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>