team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/ARR_Created__c.field-meta.xml
<CustomField>
    <fullName>ARR_Created__c</fullName>
    <label>ARR Created</label>
    <description>Created ARR as Number (not Currency).</description>
    <inlineHelpText>Created ARR as Number (not Currency).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>