team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/ARR_Won__c.field-meta.xml
<CustomField>
    <fullName>ARR_Won__c</fullName>
    <label>ARR Won</label>
    <description>Won ARR as Number (not Currency) so snapshots stay USD-safe.</description>
    <inlineHelpText>Won ARR as Number (not Currency) so snapshots stay USD-safe.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>