team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Closure_Based_Rate__c.field-meta.xml
<CustomField>
    <fullName>Closure_Based_Rate__c</fullName>
    <label>Closure Based Rate</label>
    <description>Stored won/(won+lost) among CloseDate-in-quarter deals. Not a formula.</description>
    <inlineHelpText>Stored won/(won+lost) among CloseDate-in-quarter deals. Not a formula.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>