team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Closure_Lost_Count__c.field-meta.xml
<CustomField>
    <fullName>Closure_Lost_Count__c</fullName>
    <label>Closure Lost Count</label>
    <description>Lost deals whose CloseDate falls in this quarter.</description>
    <inlineHelpText>Lost deals whose CloseDate falls in this quarter.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>