team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Closure_Won_Count__c.field-meta.xml
<CustomField>
    <fullName>Closure_Won_Count__c</fullName>
    <label>Closure Won Count</label>
    <description>Won deals whose CloseDate falls in this quarter (reports quote this).</description>
    <inlineHelpText>Won deals whose CloseDate falls in this quarter (reports quote this).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>