team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Cohort_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Conversion_Rate__c</fullName>
    <label>Cohort Conversion Rate</label>
    <description>Stored won/created. Null when created is 0. Not a formula.</description>
    <inlineHelpText>Stored won/created. Null when created is 0. Not a formula.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>