team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Cohort_End__c.field-meta.xml
<CustomField>
    <fullName>Cohort_End__c</fullName>
    <label>Cohort End</label>
    <description>Last day of the SQL quarter.</description>
    <inlineHelpText>Last day of the SQL quarter.</inlineHelpText>
    <type>Date</type>
</CustomField>