team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Cohort_Key__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Key__c</fullName>
    <label>Cohort Key</label>
    <description>Quarter of SQL_Datestamp_bf__c, e.g. 2025Q1. Never CreatedDate.</description>
    <inlineHelpText>Quarter of SQL_Datestamp_bf__c, e.g. 2025Q1. Never CreatedDate.</inlineHelpText>
    <type>Text</type>
    <length>16</length>
</CustomField>