team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Cohort_Start__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Start__c</fullName>
    <label>Cohort Start</label>
    <description>First day of the SQL quarter.</description>
    <inlineHelpText>First day of the SQL quarter.</inlineHelpText>
    <type>Date</type>
</CustomField>