team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Contested_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contested_Win_Rate__c</fullName>
    <label>Contested Win Rate</label>
    <description>Stored won/(won+worked). Null when no contested deals. Not a formula.</description>
    <inlineHelpText>Stored won/(won+worked). Null when no contested deals. Not a formula.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>