team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Created_Count__c.field-meta.xml
<CustomField>
    <fullName>Created_Count__c</fullName>
    <label>Created Count</label>
    <description>Deals that entered this SQL cohort.</description>
    <inlineHelpText>Deals that entered this SQL cohort.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>