team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <description>Director whose AE team this cohort snapshot covers. Not hardcoded to one user.</description>
    <inlineHelpText>Director whose AE team this cohort snapshot covers. Not hardcoded to one user.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Cohort_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>