team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Distortion__c.field-meta.xml
<CustomField>
    <fullName>Distortion__c</fullName>
    <label>Distortion</label>
    <description>Stored contested minus closure-based. Null when either rate is null.</description>
    <inlineHelpText>Stored contested minus closure-based. Null when either rate is null.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>