team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <description>Upsert key: directorId_cohortKey_snapshotDate. Unique.</description>
    <inlineHelpText>Upsert key: directorId_cohortKey_snapshotDate. Unique.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>