team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Ghosted_Count__c.field-meta.xml
<CustomField>
    <fullName>Ghosted_Count__c</fullName>
    <label>Ghosted Count</label>
    <description>Closed-lost Ghosted deals. Own bucket — not never-real, not contested.</description>
    <inlineHelpText>Ghosted losses in this SQL cohort.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>