team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Ghosted_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Ghosted_Excluded__c</fullName>
    <label>Ghosted Excluded</label>
    <description>Whether Ghosted was treated as never-real when this row was written.</description>
    <inlineHelpText>Whether Ghosted was treated as never-real when this row was written.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>