team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Mature__c.field-meta.xml
<CustomField>
    <fullName>Mature__c</fullName>
    <label>Mature</label>
    <description>True when quarter-end is more than p75 SQL-to-close days in the past.</description>
    <inlineHelpText>True when quarter-end is more than p75 SQL-to-close days in the past.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>