team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Never_Real_Count__c.field-meta.xml
<CustomField>
    <fullName>Never_Real_Count__c</fullName>
    <label>Never Real Count</label>
    <description>Closed-lost never-real deals (blank, not qualified, duplicate, insufficient data). Ghosted is a separate field.</description>
    <inlineHelpText>Never-real losses. Ghosted is not included.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>