team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/P75_Cycle_Days__c.field-meta.xml
<CustomField>
    <fullName>P75_Cycle_Days__c</fullName>
    <label>P75 Cycle Days</label>
    <description>p75 of SQL-to-close days on resolved deals used for maturity.</description>
    <inlineHelpText>p75 of SQL-to-close days on resolved deals used for maturity.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>