team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Purge_Dump_Count__c.field-meta.xml
<CustomField>
    <fullName>Purge_Dump_Count__c</fullName>
    <label>Purge Dump Count</label>
    <description>Closed-not-won sharing an owner and CloseDate in a group of 5+.</description>
    <inlineHelpText>Closed-not-won sharing an owner and CloseDate in a group of 5+.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>