team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Purge_Silent_Count__c.field-meta.xml
<CustomField>
    <fullName>Purge_Silent_Count__c</fullName>
    <label>Purge Silent Count</label>
    <description>Closed-lost with CloseDate minus LastActivityDate over the silent threshold (or no activity).</description>
    <inlineHelpText>Closed-lost with CloseDate minus LastActivityDate over the silent threshold (or no activity).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>