team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Qualification_Yield__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Yield__c</fullName>
    <label>Qualification Yield</label>
    <description>Stored (won+worked)/created. Null when created is 0. Not a formula.</description>
    <inlineHelpText>Stored (won+worked)/created. Null when created is 0. Not a formula.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>