team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Qualified_Count__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Count__c</fullName>
    <label>Qualified Count</label>
    <description>Deals with an SQL datestamp in this quarter. Win-rate math uses this count.</description>
    <inlineHelpText>SQL-qualified deals in this quarter.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>