team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Resolved_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Win_Rate__c</fullName>
    <label>Resolved Win Rate</label>
    <description>Stored won/(won+worked+never-real). Null when none resolved. Not a formula.</description>
    <inlineHelpText>Stored won/(won+worked+never-real). Null when none resolved. Not a formula.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>