team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <description>Night the batch wrote this row.</description>
    <inlineHelpText>Night the batch wrote this row.</inlineHelpText>
    <type>Date</type>
</CustomField>