team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Still_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Still_Open_Count__c</fullName>
    <label>Still Open Count</label>
    <description>Cohort deals not yet resolved.</description>
    <inlineHelpText>Cohort deals not yet resolved.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>