team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Thin_Sample__c.field-meta.xml
<CustomField>
    <fullName>Thin_Sample__c</fullName>
    <label>Thin Sample</label>
    <description>True when created is under the thin-sample floor (directional).</description>
    <inlineHelpText>True when created is under the thin-sample floor (directional).</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>