team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Unmapped_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Unmapped_Reasons__c</fullName>
    <label>Unmapped Reasons</label>
    <description>Loss reasons in this snapshot that had no Cockpit_Loss_Root__mdt row.</description>
    <inlineHelpText>Loss reasons in this snapshot that had no Cockpit_Loss_Root__mdt row.</inlineHelpText>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>