team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Won_Count__c.field-meta.xml
<CustomField>
    <fullName>Won_Count__c</fullName>
    <label>Won Count</label>
    <description>Won deals in this SQL cohort.</description>
    <inlineHelpText>Won deals in this SQL cohort.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>