team-app/main/default/objects/Cockpit_Cohort_Snapshot__c/fields/Worked_Loss_Count__c.field-meta.xml
<CustomField>
    <fullName>Worked_Loss_Count__c</fullName>
    <label>Worked Loss Count</label>
    <description>Closed-lost deals classified as a real contest.</description>
    <inlineHelpText>Closed-lost deals classified as a real contest.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>